--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-    "name": "project-whiskers",
-    "version": "0.0.1",
-    "description": "Meow",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/jbinto/project-whiskers"
-    },
-    "author": "Jesse Buchanan",
-    "license": "MIT",
-    "scripts": {
-        "test": "jest --forceExit --coverage --verbose",
-        "watch-test": "npm run test -- --watchAll",
-        "build-ts": "tsc",
-        "watch-ts": "tsc -w",
-        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix"
-    },
-    "dependencies": {
-        "dotenv": "^8.2.0"
-    },
-    "devDependencies": {
-        "@types/eslint": "^6.1.3",
-        "@types/jest": "^24.0.23",
-        "@types/node": "^12.12.14",
-        "@typescript-eslint/eslint-plugin": "^2.10.0",
-        "@typescript-eslint/parser": "^2.10.0",
-        "chai": "^4.2.0",
-        "eslint": "^6.7.2",
-        "jest": "^24.9.0",
-        "nodemon": "^2.0.1",
-        "ts-jest": "^24.2.0",
-        "ts-node": "^8.5.4",
-        "typescript": "^3.7.2"
+  "name": "project-whiskers",
+  "version": "0.0.1",
+  "description": "Meow",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jbinto/project-whiskers"
+  },
+  "author": "Jesse Buchanan",
+  "license": "MIT",
+  "scripts": {
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/eslint": "^6.1.3",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
+    "nodemon": "^2.0.1",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
